--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -44,6 +44,37 @@
   	position: relative;
   	width: auto;}
 
+  	#sesion{
+	background-color: silver;
+	-moz-border-radius-topright:15px;
+	-moz-border-radius-topleft:15px;
+	-moz-border-radius-bottomleft:15px;
+	-moz-border-radius-bottomright:15px;
+	-webkit-border-top-right-radius:15px;
+	-webkit-border-bottom-right-radius:15px;
+	-webkit-border-top-left-radius:15px;
+	-webkit-border-bottom-left-radius:15px;
+	border-bottom-right-radius:15px;
+	border-top-left-radius:15px;
+	border-top-right-radius:15px;
+	border-bottom-left-radius:15px;
+	-moz-box-shadow: -14px 10px 16px #000000 ;
+	-webkit-box-shadow: -14px 10px 16px #000000 ;
+	box-shadow: -14px 10px 16px #000000 ;
+	border-style: solid;
+	border-color: rgba(159,0,0,1);
+	color:white;
+	margin-left: auto;
+  	margin-right: auto;
+  	margin-top: 8%;
+  	max-width: 700px;
+  	padding-bottom: 15px;
+  	padding-left: 30px;
+  	padding-right: 15px;
+  	padding-top: 10px;
+  	position: relative;
+  	width: auto;}
+
 table,th,td{
 	border-radius: .5em;
 }
